tests/golden/compile-fail/pattern_unit_payload.rua
enum State { Ready }

fn value(state: State) -> i64 {
    match state {
        State::Ready(value) => value,
    }
}
